--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -35,6 +34,7 @@
     "axios": "^0.21",
     "browser-sync": "^2.29.1",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "dayjs": "1.11.7",
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
     "postcss": "^8.1.14",
